--- a/main.tex
+++ b/main.tex
@@ -890,17 +890,23 @@ instance Generic Tree
 \vspace{-0.25cm}
 \begin{lstlisting}
 type RepTreeContext = NS (NP I)
-    ('[ '[Tree, Int, Bool, Tree]
-      , '[Tree, Int, Bool, Tree]
-      , '[Tree, Tree, Int, Bool]
-      , '[Bool, Tree]
-      , '[Bool, Tree] ])
+  ('[ '[Tree, Int, Bool, Tree]
+    , '[Tree, Int, Bool, Tree]
+    , '[Tree, Tree, Int, Bool]
+    , '[Bool, Tree]
+    , '[Bool, Tree] ])
 \end{lstlisting}
 \vspace{-0.25cm}
 \end{framed}
 \caption{Автоматически генерируемый код типа контекста}
 \label{list:rep-context}
 \end{figure}
+
+\Conc
+
+Результатом данной работы является полученная техника построения типа контекста обобщённого зиппера, которая служит примером возможности применения средств обобщённого программирования к различным задачам эффективного обхода структур данных, их обработки и так далее. Выразительность приведённого кода демонстрирует преимущества применения нового подхода к обобщённому программированию типов данных к поставленной задаче.
+
+В ходе исследования были изучены имеющиеся подходы к обобщённому программированию типов данных, проведён их сравнительный анализ, выявлены достоинства и недостатки различных библиотек обобщённого программирования.
 
 % Печать списка литературы (библиографии)
 \printbibliography[heading=bibintoc%
